linted and blackened notebooks using jupytext

--- a/uruk/primer3.ipynb
+++ b/uruk/primer3.ipynb
@@ -61,10 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "import sys, os\n",
-    "import collections\n",
-    "from tf.app import use\n",
-    "from tf.applib.helpers import dm"
+    "from tf.app import use"
    ]
   },
   {
@@ -421,7 +418,7 @@
     }
    ],
    "source": [
-    "A = use('uruk', hoist=globals())"
+    "A = use(\"uruk\", hoist=globals())"
    ]
   },
   {
@@ -438,8 +435,7 @@
     "ExecuteTime": {
      "end_time": "2018-05-01T18:04:17.304517Z",
      "start_time": "2018-05-01T18:04:17.222756Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -530,10 +526,10 @@
     }
    ],
    "source": [
-    "pNum = 'P005213'\n",
-    "query = f'''\n",
+    "pNum = \"P005213\"\n",
+    "query = f\"\"\"\n",
     "tablet catalogId={pNum}\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "tablet = results[0][0]\n",
     "A.lineart(tablet, width=400)\n",
@@ -546,7 +542,7 @@
    "source": [
     "Let's start by bring up one line, namely the second line in the second column, and once we have described its specific form, we can try and construct a query that will bring up all similar examples.\n",
     "\n",
-    "First, a simple query that directly refers to this line. "
+    "First, a simple query that directly refers to this line."
    ]
   },
   {
@@ -578,13 +574,13 @@
     }
    ],
    "source": [
-    "query = f'''\n",
+    "query = f\"\"\"\n",
     "tablet catalogId={pNum}\n",
     "  face type=obverse\n",
     "    column number=2\n",
     "        line number=2\n",
     "          case\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results)"
    ]
@@ -889,7 +885,7 @@
     }
    ],
    "source": [
-    "A.show(results, end=1, condenseType='line', withNodes=True)"
+    "A.show(results, end=1, condenseType=\"line\", withNodes=True)"
    ]
   },
   {
@@ -1204,10 +1200,10 @@
     }
    ],
    "source": [
-    "query = '''\n",
+    "query = \"\"\"\n",
     "case depth=1\n",
     "  sign grapheme=SZITA variant=a1\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results, withNodes=True, lineart=False)"
    ]
@@ -1258,10 +1254,10 @@
     }
    ],
    "source": [
-    "query = '''\n",
+    "query = \"\"\"\n",
     "case depth=2\n",
     "  sign grapheme=SZITA variant=a1\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results, withNodes=True, lineart=False)"
    ]
@@ -1294,10 +1290,10 @@
     }
    ],
    "source": [
-    "query = '''\n",
+    "query = \"\"\"\n",
     "case depth=3\n",
     "  sign grapheme=SZITA variant=a1\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results, withNodes=True, lineart=False)"
    ]
@@ -1330,10 +1326,10 @@
     }
    ],
    "source": [
-    "query = '''\n",
+    "query = \"\"\"\n",
     "case depth=4\n",
     "  sign grapheme=SZITA variant=a1\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results, withNodes=True, lineart=False)"
    ]
@@ -1387,11 +1383,11 @@
     }
    ],
    "source": [
-    "query = f'''\n",
+    "query = f\"\"\"\n",
     "tablet catalogId={pNum}\n",
     " case depth=1\n",
     "   sign grapheme=SZITA variant=a1\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results, withNodes=False, lineart=False)"
    ]
@@ -1400,7 +1396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are thirteen occurrences of SZITA~a1 in P005213, which means that one-sixth (13/78) of all occurrences of SZITA~a1 in the entire corpus occur in this one tablet. \n",
+    "There are thirteen occurrences of SZITA~a1 in P005213, which means that one-sixth (13/78) of all occurrences of SZITA~a1 in the entire corpus occur in this one tablet.\n",
     "\n",
     "The other orthography that plays a central role in P005213 is ZATU659x1(N01), which regularly occurs in the other half of the subdivided lines that include SZITA~a1 in the other case in the line."
    ]
@@ -1439,13 +1435,13 @@
     }
    ],
    "source": [
-    "query = f'''\n",
+    "query = f\"\"\"\n",
     "tablet catalogId={pNum}\n",
     "  case\n",
     "    quad\n",
     "      =: sign grapheme=ZATU659\n",
     "      <: sign grapheme=N01 repeat=1\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results, withNodes=False, lineart=False)"
    ]
@@ -1579,7 +1575,7 @@
     }
    ],
    "source": [
-    "query = '''\n",
+    "query = \"\"\"\n",
     "tablet\n",
     "  case depth=1 terminal\n",
     "    sign grapheme=SZITA variant=a1\n",
@@ -1588,7 +1584,7 @@
     "      =: sign grapheme=ZATU659\n",
     "      <: sign grapheme=N01 repeat=1\n",
     "      :=\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results, withNodes=False, lineart=False)"
    ]
@@ -1599,7 +1595,7 @@
    "source": [
     "This query gives us 95 occurrences in four distinct proto-cuneiform tablets: P005213, P005214, P005215 and P002399.\n",
     "\n",
-    "The two indented lines starting with \"case\" identify a distinct sign; \n",
+    "The two indented lines starting with \"case\" identify a distinct sign;\n",
     "\n",
     "=: left and right start at the same slot\n",
     "\n",
@@ -1730,7 +1726,7 @@
     }
    ],
    "source": [
-    "query = '''\n",
+    "query = \"\"\"\n",
     "tablet\n",
     "  case depth=1 terminal\n",
     "    sign grapheme=SZITA variant=a1\n",
@@ -1739,17 +1735,10 @@
     "      =: sign grapheme=ZATU659\n",
     "      <: sign grapheme=N01 repeat=1\n",
     "      :=\n",
-    "'''\n",
+    "\"\"\"\n",
     "results = A.search(query)\n",
     "A.table(results, withNodes=False, lineart=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1768,7 +1757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   },
   "toc": {
    "nav_menu": {},
@@ -1782,5 +1771,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
