--- a/oldbabylonian/analysis.ipynb
+++ b/oldbabylonian/analysis.ipynb
@@ -8,9 +8,8 @@
    "source": [
     "import os\n",
     "import collections\n",
-    "import re\n",
     "\n",
-    "from tf.fabric import Fabric"
+    "from tf.fabric import Fabric\n"
    ]
   },
   {
@@ -26,13 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE = os.path.expanduser('~/github')\n",
-    "ORG = 'Nino-cunei'\n",
-    "REPO = 'oldbabylonian'\n",
-    "VERSION = '0.2'\n",
+    "BASE = os.path.expanduser(\"~/github\")\n",
+    "ORG = \"Nino-cunei\"\n",
+    "REPO = \"oldbabylonian\"\n",
+    "VERSION = \"0.2\"\n",
     "\n",
-    "REPO_PATH = f'{BASE}/{ORG}/{REPO}'\n",
-    "TF_PATH = f'{REPO_PATH}/tf/{VERSION}'"
+    "REPO_PATH = f\"{BASE}/{ORG}/{REPO}\"\n",
+    "TF_PATH = f\"{REPO_PATH}/tf/{VERSION}\""
    ]
   },
   {
@@ -85,7 +84,7 @@
    "source": [
     "TF = Fabric(locations=TF_PATH)\n",
     "allFeatures = TF.explore(silent=True, show=True)\n",
-    "loadableFeatures = allFeatures['nodes'] + allFeatures['edges']\n",
+    "loadableFeatures = allFeatures[\"nodes\"] + allFeatures[\"edges\"]\n",
     "api = TF.load(loadableFeatures, silent=True)\n",
     "api.makeAvailableIn(globals())"
    ]
@@ -107,9 +106,9 @@
    "source": [
     "supers = collections.Counter()\n",
     "\n",
-    "for s in F.otype.s('sign'):\n",
-    "  if F.super.v(s):\n",
-    "    supers[F.reading.v(s)] += 1"
+    "for s in F.otype.s(\"sign\"):\n",
+    "    if F.super.v(s):\n",
+    "        supers[F.reading.v(s)] += 1"
    ]
   },
   {
@@ -223,43 +222,39 @@
    "source": [
     "introNouns = []\n",
     "\n",
-    "for line in F.otype.s('line'):\n",
-    "  signs = L.d(line, otype='sign')\n",
-    "  \n",
-    "  # um-ma ...  ma\n",
-    "  # 0  1  >=2  >=3\n",
-    "  \n",
-    "  # first find the ma on at least position 3\n",
-    "  \n",
-    "  mas = []\n",
-    "  \n",
-    "  for i in range(3, len(signs)):\n",
-    "    if F.reading.v(signs[i]) == 'ma':\n",
-    "      mas.append(i)\n",
-    "      \n",
-    "  # if there is no ma, skip the line\n",
-    "  \n",
-    "    if not mas:\n",
-    "      continue\n",
-    "      \n",
-    "  # test the last ma\n",
-    "  # find the first um-ma in front of it, with room for something in between\n",
-    "    \n",
-    "    lastMa = mas[-1]\n",
-    "    between = None\n",
-    "    \n",
-    "    for i in range(lastMa - 2):\n",
-    "      if (\n",
-    "        F.reading.v(signs[i]) == 'um'\n",
-    "        and\n",
-    "        F.reading.v(signs[i + 1]) == 'ma'\n",
-    "      ):\n",
-    "        between = signs[i + 2:lastMa]\n",
-    "      \n",
-    "    if between:\n",
-    "      introNouns.append(between)\n",
+    "for line in F.otype.s(\"line\"):\n",
+    "    signs = L.d(line, otype=\"sign\")\n",
     "\n",
-    "print(f'Found {len(introNouns)} occurrences of intro nouns')"
+    "    # um-ma ...  ma\n",
+    "    # 0  1  >=2  >=3\n",
+    "\n",
+    "    # first find the ma on at least position 3\n",
+    "\n",
+    "    mas = []\n",
+    "\n",
+    "    for i in range(3, len(signs)):\n",
+    "        if F.reading.v(signs[i]) == \"ma\":\n",
+    "            mas.append(i)\n",
+    "\n",
+    "        # if there is no ma, skip the line\n",
+    "\n",
+    "        if not mas:\n",
+    "            continue\n",
+    "\n",
+    "        # test the last ma\n",
+    "        # find the first um-ma in front of it, with room for something in between\n",
+    "\n",
+    "        lastMa = mas[-1]\n",
+    "        between = None\n",
+    "\n",
+    "        for i in range(lastMa - 2):\n",
+    "            if F.reading.v(signs[i]) == \"um\" and F.reading.v(signs[i + 1]) == \"ma\":\n",
+    "                between = signs[i + 2 : lastMa]\n",
+    "\n",
+    "        if between:\n",
+    "            introNouns.append(between)\n",
+    "\n",
+    "print(f\"Found {len(introNouns)} occurrences of intro nouns\")"
    ]
   },
   {
@@ -298,8 +293,10 @@
     "introNounsCount = collections.Counter()\n",
     "\n",
     "for between in introNouns:\n",
-    "  form = ''.join(f'{F.reading.v(n) or F.grapheme.v(n)}{F.after.v(n)}' for n in between)\n",
-    "  introNounsCount[form] += 1"
+    "    form = \"\".join(\n",
+    "        f\"{F.reading.v(n) or F.grapheme.v(n)}{F.after.v(n)}\" for n in between\n",
+    "    )\n",
+    "    introNounsCount[form] += 1"
    ]
   },
   {
@@ -436,25 +433,11 @@
    ],
    "source": [
     "for (proper, amount) in sorted(\n",
-    "  introNounsCount.items(),\n",
-    "  key=lambda x: (-x[1], x[0]),\n",
+    "    introNounsCount.items(),\n",
+    "    key=lambda x: (-x[1], x[0]),\n",
     ")[0:100]:\n",
-    "  print(f'{proper:<30} {amount:>4} x')"
+    "    print(f\"{proper:<30} {amount:>4} x\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -473,9 +456,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
